added song lyric

--- a/_posts/0000-01-02-ksh1elds555.md
+++ b/_posts/0000-01-02-ksh1elds555.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+It's the end of the world as we know it, but I feel fine.
 Use the left arrow to go back! Namaste sisters
